--- a/helm/kubernetes/requirements.yaml
+++ b/helm/kubernetes/requirements.yaml
@@ -1,9 +1,10 @@
 dependencies:
   - name: etcd
-    version: 4.3.7
-    repository: https://charts.bitnami.com/bitnami
+    version: ">=1.0.0"
+    # Temporary until we're up and running, then we can move to a more robust etcd chart
+    repository: file://./subcharts/etcd
     condition: etcd.enabled
   - name: kube-apiserver
     version: ">=1.0.0"
-    repository: file://./charts/kube-apiserver/
+    repository: file://./subcharts/kube-apiserver
     condition: kube-apiserver.enabled
