Convert to PodMonitor in the overlay

--- a/kustomize/overlays/etcd/local/kustomization.yml
+++ b/kustomize/overlays/etcd/local/kustomization.yml
@@ -4,6 +4,8 @@ commonLabels:
   env: local
 bases:
 - ../../../base/etcd
+resources:
+- pod-monitor.yml
 patches:
 - etcd_env.yml
 - etcd_volumes.yml
