--- a/kustomize/base/cluster-ca/cert-config.yml
+++ b/kustomize/base/cluster-ca/cert-config.yml
@@ -4,3 +4,7 @@ nameReference:
   apiVersion: cert-manager.io/v1alpha2
   fieldSpecs:
   - path: spec/secretName
+- kind: Issuer
+  apiVersion: cert-manager.io/v1alpha2
+  fieldSpecs:
+  - path: spec/ca/secretName
