More work on PKI

--- a/kustomize/base/cluster-ca/public_ca_certificate.yml
+++ b/kustomize/base/cluster-ca/public_ca_certificate.yml
@@ -5,6 +5,8 @@ metadata:
 spec:
   secretName: public-ca
   commonName: "Kubernetes Public CA"
+  keyAlgorithm: ecdsa
+  keySize: 384
   isCA: true
   issuerRef:
     name: selfsigning-issuer
