--- a/kustomize/base/cluster-ca/private_ca_certificate.yml
+++ b/kustomize/base/cluster-ca/private_ca_certificate.yml
@@ -5,6 +5,8 @@ metadata:
 spec:
   secretName: private-ca
   commonName: "Kubernetes Private CA"
+  keyAlgorithm: ecdsa
+  keySize: 384
   isCA: true
   issuerRef:
     name: selfsigning-issuer
