--- a/kustomize/base/etcd/peer_certificate.yml
+++ b/kustomize/base/etcd/peer_certificate.yml
@@ -6,9 +6,9 @@ spec:
   secretName: etcd-peers
   commonName: $(STATEFULSET_NAME)
   dnsNames:
-  - $(STATEFULSET_NAME)-0.$(HEADLESS_SERVICE_NAME)
-  - $(STATEFULSET_NAME)-1.$(HEADLESS_SERVICE_NAME)
-  - $(STATEFULSET_NAME)-2.$(HEADLESS_SERVICE_NAME)
+  - $(ETCD_STATEFULSET_NAME)-0.$(ETCD_HEADLESS_SERVICE_NAME)
+  - $(ETCD_STATEFULSET_NAME)-1.$(ETCD_HEADLESS_SERVICE_NAME)
+  - $(ETCD_STATEFULSET_NAME)-2.$(ETCD_HEADLESS_SERVICE_NAME)
   usages:
   - digital signature
   - key encipherment
