central kustomization to deploy kube-scheduler base

--- a/kustomize/base/kube-apiserver/kustomization.yml
+++ b/kustomize/base/kube-apiserver/kustomization.yml
@@ -4,3 +4,9 @@ commonLabels:
 resources:
 - statefulset.yml
 - service.yml
+vars:
+- name: KUBE_APISERVER_SERVICE_NAME
+  objref:
+    kind: Service
+    name: kube-apiserver
+    apiVersion: v1
