--- a/kustomize/base/etcd/statefulset.yml
+++ b/kustomize/base/etcd/statefulset.yml
@@ -40,6 +40,10 @@ spec:
           value: "3"
         - name: ETCD_NAME
           value: "$(POD_NAME)"
+        - name: ETCD_INITIAL_CLUSTER_STATE
+          value: new
+        - name: ETCD_INITIAL_CLUSTER
+          value: "https://$(ETCD_STATEFULSET_NAME)-0.$(ETCD_HEADLESS_SERVICE_NAME):2380"
         - name: ETCD_DATA_DIR
           value: "/var/lib/etcd/data"
         - name: ETCD_ADVERTISE_CLIENT_URLS
