Added localhost and short names to certs

--- a/kustomize/base/etcd/peer_certificate.yml
+++ b/kustomize/base/etcd/peer_certificate.yml
@@ -6,6 +6,10 @@ spec:
   secretName: etcd-peers
   commonName: $(ETCD_HEADLESS_SERVICE_NAME)
   dnsNames:
+  - localhost
+  - $(ETCD_STATEFULSET_NAME)-0
+  - $(ETCD_STATEFULSET_NAME)-1
+  - $(ETCD_STATEFULSET_NAME)-2
   - $(ETCD_STATEFULSET_NAME)-0.$(ETCD_HEADLESS_SERVICE_NAME)
   - $(ETCD_STATEFULSET_NAME)-1.$(ETCD_HEADLESS_SERVICE_NAME)
   - $(ETCD_STATEFULSET_NAME)-2.$(ETCD_HEADLESS_SERVICE_NAME)
